# template-aws-lambda-python

./: .gitignore  README.md  api.py  app.py  handler.py  manage.py  package-lock.json  package.json  pyproject.toml  requirements.txt  serverless.yml  test_handler.py
.github/workflows/: ci.yml
mrwork/: asgi.py  settings.py
